--- a/enggpaypal.html
+++ b/enggpaypal.html
@@ -3,7 +3,7 @@
 <head>
     <title>PayPal Engineering</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic,700,500' rel='stylesheet' type='text/css'>
     <link type="text/css" href="enggpaypal.css" rel="stylesheet">
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
     <link rel="stylesheet" href="font-awesome-animation.min.css">
     <link rel="stylesheet" href="animate.css" type="text/css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
-     <link rel="stylesheet" href="materialize/css/materialize.min.css" type="text/css" media="all">
+    <link rel="stylesheet" href="materialize/css/materialize.min.css" type="text/css" media="all">
 
 </head>
 
@@ -23,10 +23,9 @@
     <script>
         $(document).ready(function() {
             $(".heart").click(function() {
-                $(this).toggleClass("fa-star-o grey-text fa-star yellow-text text-darken-2 animated bounceIn");
+                $(this).toggleClass("fa-star-o yellow-text fa-star yellow-text text-darken-2 animated bounceIn");
             });
         });
-
     </script>
     <!--begin navigation-->
     <div class="navbar-fixed">
@@ -36,10 +35,13 @@
                     <div class="col s4 grey-text text-darken-1" id="title">
                         Engineering Home
                     </div>
-                    <div class="input-field col s6">
-                       <i id="searchincon" class="material-icons prefix grey-text">search</i>
-                         <input id="icon_prefix" type="text" class="validate grey-text"> 
-                        <label for="icon_prefix grey-text">Search:</label>
+                    <div class="search grey-text text-darken-1 col s4">
+                        <form>
+                            <div class="input-field">
+                                <input id="search" placeholder="Search" type="search" required>
+                                <label for="search"><i class="material-icons grey-text">search</i></label>
+                            </div>
+                        </form>
                     </div>
                     <div class="grey-text text-darken-1" id="filter">
                         Filter
@@ -57,157 +59,17 @@
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
                     <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
+                        <img src="http://placehold.it/80x80">
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
+                    <div class="divider"></div>
                     <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
+                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
+                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
                     </div>
-                </div>
-            </div>
-        </div>
 
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-      <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -216,56 +78,17 @@
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
                     <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
+                        <img src="http://placehold.it/80x80">
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
+                    <div class="divider"></div>
                     <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
+                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
+                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-         <div class="col s3">
-            <div class="card white animated fadeIn hoverable">
-                <div class="card-content white-text">
-                    <span class="card-title grey-text text-darken-2">Altus</span>
-                    <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
-                    </div>
-                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
-                    <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -274,16 +97,41 @@
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
                     <div class="product-logo">
-                        <img src="img/placeimg_120_120_grayscale_tech.jpg">
+                        <img src="http://placehold.it/80x80">
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
+                    <div class="divider"></div>
                     <div class="icon row">
-                        <div class="col s3 offset-s10"><i class="heart fa fa-star-o grey-text"></i></div>
+                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
+                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
                     </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col s3">
+            <div class="card white animated fadeIn hoverable">
+                <div class="card-content white-text">
+                    <span class="card-title grey-text text-darken-2">Altus</span>
+                    <div class="product-logo">
+                        <img src="http://placehold.it/80x80">
+                    </div>
+                    <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
+                    <div class="divider"></div>
+                    <div class="icon row">
+                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
+                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
+                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
+
 
 </body>
 
