removing icons. replacing with text. Simple! :)

--- a/enggpaypal.html
+++ b/enggpaypal.html
@@ -23,7 +23,7 @@
     <script>
         $(document).ready(function() {
             $(".heart").click(function() {
-                $(this).toggleClass("fa-star-o yellow-text fa-star yellow-text text-darken-2 animated bounceIn");
+                $(this).toggleClass("fa-heart-o grey-text fa-heart red-text text-lighten-1 animated bounceIn");
             });
         });
     </script>
@@ -64,10 +64,10 @@
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
                     <div class="icon row">
-                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
-                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
+                        <div class="link col s3 grey-text">support</div>
+                        <div class="link col s3 grey-text">docs</div>
+                        <div class="link col s3 grey-text">blog</div>
+                        <div class="col s3"><i class="heart fa fa-heart-o grey-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
                     </div>
 
                 </div>
@@ -83,16 +83,16 @@
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
                     <div class="icon row">
-                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
-                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
+                        <div class="link col s3 grey-text">support</div>
+                        <div class="link col s3 grey-text">docs</div>
+                        <div class="link col s3 grey-text">blog</div>
+                        <div class="col s3"><i class="heart fa fa-heart-o grey-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
                     </div>
 
                 </div>
             </div>
         </div>
-        <div class="col s3">
+       <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -102,16 +102,16 @@
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
                     <div class="icon row">
-                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
-                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
+                        <div class="link col s3 grey-text">support</div>
+                        <div class="link col s3 grey-text">docs</div>
+                        <div class="link col s3 grey-text">blog</div>
+                        <div class="col s3"><i class="heart fa fa-heart-o grey-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
                     </div>
 
                 </div>
             </div>
         </div>
-        <div class="col s3">
+       <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -121,10 +121,10 @@
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
                     <div class="icon row">
-                        <div class="col s3"><i class="fa fa-question grey-text tooltipped" data-tooltip="support" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-file-text-o grey-text tooltipped" data-tooltip="documentation" data-delay="1"></i></div>
-                        <div class="col s3"><i class="fa fa-rss grey-text tooltipped" data-tooltip="blog" data-delay="1"></i></div>
-                        <div class="col s3"><i class="heart fa fa-star-o yellow-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
+                        <div class="link col s3 grey-text">support</div>
+                        <div class="link col s3 grey-text">docs</div>
+                        <div class="link col s3 grey-text">blog</div>
+                        <div class="col s3"><i class="heart fa fa-heart-o grey-text tooltipped" data-tooltip="favorite" data-delay="1"></i></div>
                     </div>
 
                 </div>
