added padding to heart icon

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
                     <div class="product-logo">
-                        <img src="http://placekitten.com/g/80/80">
+                        <img src="http://placehold.it/80x80">
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
