--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
                     <div class="search grey-text text-darken-1 col s4">
                         <form>
                             <div class="input-field">
-                                <input id="search" placeholder="Search" type="search" required>
-                                <label for="search"><i class="material-icons grey-text">search</i></label>
+                                <input id="search" placeholder="Search" type="search">
+                                <label for="search">
+                                    <i class="material-icons grey-text">search</i>
+                                </label>
                             </div>
                         </form>
                     </div>
-                    <div class="grey-text text-darken-1" id="filter">
-                        Filter
+                    <div class="grey-text" id="filter">
+                        /add filter here/
                     </div>
                 </div>
             </div>
@@ -81,7 +83,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                     <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -91,7 +93,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -100,7 +102,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                     <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -110,7 +112,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -119,7 +121,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                     <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -130,7 +132,7 @@
             </div>
         </div>
     </div>
-<div class="row">
+    <div class="row">
         <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
@@ -140,7 +142,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                   <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -159,7 +161,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                     <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -169,7 +171,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -178,7 +180,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                     <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -188,7 +190,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -197,7 +199,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                     <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -208,7 +210,7 @@
             </div>
         </div>
     </div>
-<div class="row">
+    <div class="row">
         <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
@@ -247,7 +249,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -256,7 +258,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                     <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -266,7 +268,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -285,7 +287,7 @@
             </div>
         </div>
     </div>
-<div class="row">
+    <div class="row">
         <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
@@ -323,7 +325,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -342,7 +344,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -351,7 +353,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                 <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -361,7 +363,7 @@
             </div>
         </div>
     </div>
-<div class="row">
+    <div class="row">
         <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
@@ -371,7 +373,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                   <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -390,7 +392,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                   <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -400,7 +402,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -409,7 +411,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                   <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
@@ -419,7 +421,7 @@
                 </div>
             </div>
         </div>
-       <div class="col s3">
+        <div class="col s3">
             <div class="card white animated fadeIn hoverable">
                 <div class="card-content white-text">
                     <span class="card-title grey-text text-darken-2">Altus</span>
@@ -428,7 +430,7 @@
                     </div>
                     <p class="grey-text">I am a very simple card. I am good at containing small bits of information. </p>
                     <div class="divider"></div>
-                   <div class="icon row">
+                    <div class="icon row">
                         <div class="link col s4 grey-text">support</div>
                         <div class="link col s3 grey-text">docs</div>
                         <div class="link col s3 grey-text">blog</div>
